<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    android:layout_margin="5pt"
    tools:context=".calculatorv1">

    <EditText
        android:id="@+id/editText0"
        android:layout_width="140pt"
        android:layout_height="30pt"
        android:layout_margin="5pt"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/navy"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="140pt"
        android:layout_height="30pt"
        android:layout_margin="5pt"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/navy"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140pt"
        android:layout_height="30pt"
        android:layout_margin="5pt"
        android:text="0"
        android:textColor="@color/navy"
        android:textSize="10pt"/>

    <LinearLayout
        android:layout_width="140pt"
        android:layout_height="30pt"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="5pt"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:layout_width="25pt"
            android:layout_height="25pt"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="5pt"
            android:layout_marginEnd="5pt"
            android:text="@string/plus"
            android:textSize="10pt"
            android:textColor="@color/whiteb"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            android:layout_width="25pt"
            android:layout_height="25pt"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="5pt"
            android:layout_marginEnd="5pt"
            android:text="@string/minus"
            android:textSize="10pt"
            android:textColor="@color/whiteb"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            android:layout_width="25pt"
            android:layout_height="25pt"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="5pt"
            android:layout_marginEnd="5pt"
            android:text="@string/multi"
            android:textColor="@color/whiteb"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            android:layout_width="25pt"
            android:layout_height="25pt"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="5pt"
            android:layout_marginEnd="5pt"
            android:text="@string/divide"
            android:textSize="10pt"
            android:textColor="@color/whiteb"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>